# nanorllm

./: .gitignore  README.md  pyproject.toml
docs/: exported_trajectories.json  trajectory_viewer.html  trajectory_viewer_README.md  trajectory_viewer_sample.json  trajectory_viewer_schema.json
examples/: train_math_grpo.py
nanorllm/agents/: base.py  math_agent.py
nanorllm/algos/: grpo.py
nanorllm/core/: trajectory.py  types.py
nanorllm/datasets/: simple_math.py
nanorllm/envs/: base.py  math_env.py
nanorllm/llm/: gemini.py
nanorllm/policy/: base.py  hf_causal.py
nanorllm/rewards/: base.py  math_reward.py
nanorllm/rollout/: collector.py  engine.py
nanorllm/trainer/: collate.py  loss.py  trainer.py
nanorllm/utils/: util.py
tests/: test_collector.py  test_math_reward.py  test_rollout_engine.py  test_training_views.py
