[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanorllm"
version = "0.1.0"
description = "Minimal nanorllm agentic RL demo"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "torch",
  "transformers",
  "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
